# completions

./: .codacy.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  .tagitrc  .travis.yml  README.md  README.rst  pyproject.toml  pyproject.toml.bak  requirements.txt  setup.py
completions/: __init__.py  __init__.py.bak  completer.py  templates.py
examples/: example.yaml
tests/: test.py
