[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "completions"
version = "0.0.3"
description = "Shell completions made easy."
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/completions"
repository = "https://github.com/pwwang/completions"

[tool.poetry.dependencies]
python = "^3.4"
colorama = "*"
python-simpleconf = "^0.1.4"
pyparam = "^0.1.3"

[tool.poetry.scripts]
completions = "completions:main"
